portfolio EPs added
